文档说明小修订

--- a/00 文档规范.md
+++ b/00 文档规范.md
@@ -6,7 +6,7 @@
 
 1. 每一部分开始之前，应当向读者指明物料清单，并用无序列表表示；
 2. 在描述操作步骤时，应尽量使用祈使句；
-3. 每一部分制作结束时，有必要时必须指导读者做测试；
+3. 每一部分制作结束时，有必要时必须指导读者做调试；
 4. 每一部分作者不能在影响阅读的情况下刷存在感，因为GitHub会自动整理commit清单，所以秋纫桑发布本文档时自然会列出贡献人员名单的；
 
 ## 知识
