添加10、11两篇文档的标题

--- a/21.md
+++ b/21.md
@@ -15,7 +15,7 @@
 
 ## 材料清单
 
-清单上没指明数量的物品只用买一个。
+清单上没指明数量的都是一个。
 
 1.  电子焊锡（根据规格不同，一卷几十元至一百多元不等）
 2.  MCP2200（USB转UART芯片，8.5元）
@@ -40,8 +40,9 @@
 21. 杜邦线若干
 22. 短路帽若干
 23. 排母若干
-24. ATmega1284P-PU（单片机芯片，约48元）
+24. ATmega1284P-PU（单片机芯片，约48元，可用ATmega644P-20PU或ATmega644-20PU代替）
 25. DIP-40插座
+26. IRLB8743 晶体管×2（3.5元）
 
 > ### 如何选购电子焊锡？
 > 
